Changes in tfplot version 2013.11-1

   o	Added Yaxis arguments to tfplot and tfOnePlot to provide more options
   	for Y axis format.

   o	Added Xaxis argument to tfplot and tfOnePlot to provide better handling
   	of X axis format.

   o	Changed tfplot behavior for zooreg series so they are treated as ts series.

Changes in tfplot version 2013.4-1

   o	Changed tplot and tfOnePlot default for pch from NULL to 1 to
   	avoid warning in R-3.0.0 trying to rep() NULL.
	
   o	Added tfOnePlot tests.

Changes in tfplot version 2012.7-1

   o	Minor change in tfVisPlot to avoid note when building, regarding
   	googleVis (which is only suggested not required).

Changes in tfplot version 2012.4-1

   o	First release. Separated user utilities (tfplot, tfOnePlot, and simple
   	series manipulations) out of tframe. See tframe NEWS for older history.
