@@ -1,12 +1,16 @@
 Changes in tfplot version 2013.11-1
 
+   o	Added splitPane argument to tfplot and tfOnePlot to provide option
+   	to produce a two pane graph, with more detail for lasy observations.
+
    o	Added Yaxis arguments to tfplot and tfOnePlot to provide more options
    	for Y axis format.
 
    o	Added Xaxis argument to tfplot and tfOnePlot to provide better handling
    	of X axis format.
 
-   o	Changed tfplot behavior for zooreg series so they are treated as ts series.
+   o	Changed tfplot behavior for zooreg series so they are treated as 
+   	ts series.
 
 Changes in tfplot version 2013.4-1
 
